--- a/web/styles/popovers.css
+++ b/web/styles/popovers.css
@@ -933,6 +933,23 @@ ul {
     }
 }
 
+
+#preferred_language_selection_modal {
+    width: min(750px, 70vw);
+}
+.preferred_language_modal_table {
+    column-count: 3;
+
+    @media (width < $md_min) {
+        column-count: 2;
+    }
+
+    @media (width < $sm_min) {
+        column-count: 1;
+    }
+}
+
+
 #send_later_popover {
     & hr {
         margin: 5px 0;
