Log added to check the message content

--- a/web/templates/message_body.hbs
+++ b/web/templates/message_body.hbs
@@ -45,9 +45,9 @@
     {{#unless is_hidden}}
     <div class="message_content rendered_markdown">
         {{#if use_match_properties}}
-            {{rendered_markdown msg/match_content}}
+            Test Message
         {{else}}
-            {{rendered_markdown msg/content}}
+            Say Message
         {{/if}}
     </div>
     {{else}}
