--- a/web/templates/message_body.hbs
+++ b/web/templates/message_body.hbs
@@ -45,9 +45,9 @@
     {{#unless is_hidden}}
     <div class="message_content rendered_markdown">
         {{#if use_match_properties}}
-            Test Message
+            {{rendered_markdown msg/match_content}}
         {{else}}
-            Say Message
+            {{rendered_markdown msg/content}}
         {{/if}}
     </div>
     {{else}}
